@@ -114,6 +114,7 @@ Cacti CHANGELOG
 -feature: Move the notes field to bottom of page
 -feature: New availability option "Ping or SNMP"
 -feature: Allow for specification of a default reindex method
+-feature: Show more colors on a single color's page
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
